@@ -1,3 +1,6 @@
+2013-08-28 Aurelien Degremont  <aurelien.degremont@cea.fr>
+	* Clean handling of remote shine output (ticket #25).
+
 2013-08-26 Aurelien Degremont  <aurelien.degremont@cea.fr>
 	* Automatically load and unload modules when needed (ticket #19).
 
